fix(oblique/styles): make sure `ob-media-breakpoint-up` and `ob-media-breakpoint-down` don't overlap
Without this change, both mixin apply their content on viewport widths that exactly match a
breakpoint. Now only `ob-media-breakpoint-down` apply its content on such viewports widths.

OUI-2556

--- a/projects/oblique/src/styles/scss/core/mixins/_layout.scss
+++ b/projects/oblique/src/styles/scss/core/mixins/_layout.scss
@@ -11,7 +11,7 @@
 
 @mixin ob-media-breakpoint-up($name) {
 	@include ob-map-error(variables.$ob-grid-breakpoints, $name) {
-		@media (min-width: map.get(variables.$ob-grid-breakpoints, $name)) {
+		@media (min-width: (map.get(variables.$ob-grid-breakpoints, $name) + 1px)) {
 			@content;
 		}
 	}
